# tgbot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  run_bot.sh
.github/workflows/: docker.yml
src/: main.rs
