[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

# Зависимости для работы с Telegram Bot API
[dependencies]
teloxide = { version = "0.12", features = ["macros"] }  # Библиотека для работы с Telegram Bot API
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }  # Асинхронный runtime
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }  # Библиотека для HTTP-запросов с rustls
serde = { version = "1.0", features = ["derive"] }  # Для сериализации/десериализации JSON
serde_json = "1.0"  # Для работы с JSON
rand = "0.8"  # Для генерации случайных чисел
log = "0.4"  # Для логирования
env_logger = "0.10" # Для настройки логирования
dotenv = "0.15" # Для загрузки переменных окружения из файла .env

# Зависимости для тестирования
[dev-dependencies]
tokio-test = "0.4"